--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>The Minimal React Webpack Babel Setup</title>
+  		<meta charset="utf-8">
+		  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+      <title>My Soundcloud</title>
   </head>
   <body>
     <div id="app"></div>
