--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
   		<meta charset="utf-8">
 		  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+		  <link rel="stylesheet" href="/style.css">
       <title>My Soundcloud</title>
   </head>
   <body>
