--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,15 @@
   <head>
   		<meta charset="utf-8">
 		  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+      <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 		  <link rel="stylesheet" href="/style.css">
       <title>My Soundcloud</title>
   </head>
   <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
