change app title

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
       <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 		  <link rel="stylesheet" href="/style.css">
-      <title>My Soundcloud</title>
+      <title>Coolplay</title>
   </head>
   <body>
     <noscript>
